[package]
name = "apison-rs"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
r2d2 = "*"
r2d2-diesel = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
